--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -31,9 +30,15 @@
               <h3 class="masthead-brand">Koo Fitness Club</h3>
               <nav>
                 <ul class="nav masthead-nav">
-                  <li class="active"><a href="#">Home</a></li>
-                  <li><a href="#">Features</a></li>
-                  <li><a href="#">Contact</a></li>
+                  <li>
+                    <a href="index.html">Home</a>
+                  </li>
+                  <li>
+                    <a href="whosehouse.html">Whose House?</a>
+                  </li>
+                  <li>
+                    <a href="#">Contact</a>
+                  </li>
                 </ul>
               </nav>
             </div>
