s/whosehouse/whose_house/

--- a/whose_house.html
+++ b/whose_house.html
@@ -4,7 +4,7 @@
     <title>Whose House?</title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/header.css" rel="stylesheet">
-    <link href="css/whosehouse.css" rel="stylesheet">
+    <link href="css/whose_house.css" rel="stylesheet">
   </head>
   <body>
     <div class="container">
@@ -17,7 +17,7 @@
                 <a href="index.html">Home</a>
               </li>
               <li>
-                <a href="whosehouse.html">Whose House?</a>
+                <a href="whose_house.html">Whose House?</a>
               </li>
               <li>
                 <a href="#">Contact</a>
