fix whose_house link

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <a href="index.html">Home</a>
                   </li>
                   <li>
-                    <a href="whosehouse.html">Whose House?</a>
+                    <a href="whose_house.html">Whose House?</a>
                   </li>
                   <li>
                     <a href="#">Contact</a>
