--- a/whose_house.html
+++ b/whose_house.html
@@ -66,7 +66,7 @@
           </div>
         </section>
 
-        <h4>Click the button below to see whose house we will watch the Stanford vs. San Diego State game on Saturday</h4>
+        <h4>Click the button below to see whose house we will watch the Stanford vs. UCLA game on Saturday</h4>
         <button id="whose-house-button" class="btn btn-default">
           Whose house?
         </button>
