--- a/whose_house.html
+++ b/whose_house.html
@@ -20,7 +20,7 @@
                 <a href="whose_house.html">Whose House?</a>
               </li>
               <li>
-                <a href="#">Contact</a>
+                <a href="agile.html">Agile</a>
               </li>
             </ul>
           </nav>
