--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <a href="whose_house.html">Whose House?</a>
                   </li>
                   <li>
-                    <a href="#">Contact</a>
+                    <a href="agile.html">Agile</a>
                   </li>
                 </ul>
               </nav>
