--- a/agile.html
+++ b/agile.html
@@ -115,6 +115,11 @@
                     <td>Game</td>
                     <td>10/8/2017</td>
                   </tr>
+                  <tr>
+                    <td>Cuphead</td>
+                    <td>Game</td>
+                    <td>10/8/2017</td>
+                  </tr>
                 </tbody>
               </table>
             </div>
