--- a/agile.html
+++ b/agile.html
@@ -17,7 +17,6 @@
   </head>
 
   <body>
-
     <div class="site-wrapper">
 
       <div class="site-wrapper-inner">
@@ -63,6 +62,9 @@
                   </div>
                   <div class="sprint-task">
                     Attack on Titan Season 2
+                  </div>
+                  <div class="sprint-task">
+                    Stranger Things Season 2
                   </div>
                 </div>
                 <div class="sprint-col col-sm-4">
