--- a/agile.html
+++ b/agile.html
@@ -64,6 +64,9 @@
                   <div class="sprint-task">
                     Attack on Titan Season 2
                   </div>
+                  <div class="sprint-task">
+                    Factorio
+                  </div>
                 </div>
                 <div class="sprint-col col-sm-4">
                   <h5>In progress</h5>
