add spider-chan task

--- a/agile.html
+++ b/agile.html
@@ -66,6 +66,9 @@
                   <div class="sprint-task">
                     Factorio
                   </div>
+                  <div class="sprint-task yuriko-task">
+                    Final Fantasy X-2
+                  </div>
                 </div>
                 <div class="sprint-col col-sm-4">
                   <h5>In progress</h5>
