todo: Cuphead, Undertale

--- a/agile.html
+++ b/agile.html
@@ -66,6 +66,12 @@
                   <div class="sprint-task">
                     Starcraft 2: Legacy of the Void
                   </div>
+                  <div class="sprint-task">
+                    Cuphead
+                  </div>
+                  <div class="sprint-task">
+                    Undertale
+                  </div>
                 </div>
                 <div class="sprint-col col-sm-4">
                   <h5>In progress</h5>
