Move backlog and completed sections

--- a/agile.html
+++ b/agile.html
@@ -52,16 +52,16 @@
             </div>
             <div class="panel-body">
               <div class="row sprint">
+                <div id="backlog" class="sprint-col col-sm-4">
+                  <h5>Backlog</h5>
+                  <div class="tasks"></div>
+                </div>
                 <div id="todo" class="sprint-col col-sm-4">
                   <h5>To Do</h5>
                   <div class="tasks"></div>
                 </div>
                 <div id="in-progress" class="sprint-col col-sm-4">
                   <h5>In progress</h5>
-                  <div class="tasks"></div>
-                </div>
-                <div id="completed" class="sprint-col col-sm-4">
-                  <h5>Done</h5>
                   <div class="tasks"></div>
                 </div>
               </div>
@@ -73,7 +73,8 @@
               <h1 class="panel-title">Backlog</h1>
             </div>
             <div class="panel-body">
-              <div id="backlog">
+              <div id="completed">
+                <h5>Done</h5>
                 <div class="tasks"></div>
               </div>
             </div>
