code review feedback

--- a/agile.html
+++ b/agile.html
@@ -61,7 +61,7 @@
                   <div class="tasks"></div>
                 </div>
                 <div id="in-progress" class="sprint-col col-sm-4">
-                  <h5>In progress</h5>
+                  <h5>In Progress</h5>
                   <div class="tasks"></div>
                 </div>
               </div>
@@ -70,11 +70,10 @@
 
           <div class="panel panel-default">
             <div class="panel-heading">
-              <h1 class="panel-title">Backlog</h1>
+              <h1 class="panel-title">Done</h1>
             </div>
             <div class="panel-body">
               <div id="completed">
-                <h5>Done</h5>
                 <div class="tasks"></div>
               </div>
             </div>
