--- a/tankyou.html
+++ b/tankyou.html
@@ -1,6 +1,9 @@
 <html>
   <head>
     <style>
+      body {
+        text-align: center;
+      }
       h1 {
         font-family: "Arial";
         font-size: 96px;
@@ -10,8 +13,13 @@
       }
       img {
         position: relative;
-        top: 50px;
+        top: 25px;
         width: 200px;
+      }
+      div {
+        clear: left;
+        padding-top: 400px;
+        padding-left: 100px;
       }
     </style>
   </head>
@@ -19,5 +27,8 @@
     <h1>tank</h1>
     <img src="./img/siegetank_design.jpg">
     <h1>you</h1>
+    <div>
+      <img src="./img/terran.jpg">
+    </div>
   </body>
 </html>
